# flight_processing

./: .buildinfo  .gitignore  CMakeLists.txt  CNAME  LICENSE  MANIFEST.in  README.md  airspace_data_switzerland.html  airspace_data_uk.html  airspace_data_usa.html  configuration.html  core_structure.html  demo_airspace_graph.html  demo_flight_downloader.html  demo_graph_builder.html  flight_processing.DataConfig.html  flight_processing.data.AirspaceGraph.html  flight_processing.data.FlightDownloader.html  flight_processing.data.GraphBuilder.html  genindex.html  index.html  installation.html  objects.inv  preparing_datasets.html  quickstart.html  search.html  searchindex.js  setup.py  troubleshooting.html
.github/workflows/: cmake.yml  github-pages.yml  python-publish.yml
_sources/: airspace_data_uk.rst.txt  airspace_data_usa.rst.txt  configuration.rst.txt  core_structure.rst.txt  demo_airspace_graph.rst.txt  demo_flight_downloader.rst.txt  flight_processing.DataConfig.rst.txt  index.rst.txt  installation.rst.txt  quickstart.rst.txt  troubleshooting.rst.txt
docs/: airspace_data_switzerland.rst  airspace_data_uk.rst  airspace_data_usa.ipynb  conf.py  configuration.rst  core_structure.rst  demo_airspace_graph.rst  demo_flight_downloader.ipynb  demo_flight_downloader.rst  demo_graph_builder.ipynb  demo_graph_builder.rst  downloading_flights.rst  flight_processing.DataConfig.rst  flight_processing.data.AirspaceGraph.rst  flight_processing.data.FlightDownloader.rst  flight_processing.data.GraphBuilder.rst  index.rst  installation.rst  preparing_datasets.rst  quickstart.rst  troubleshooting.rst
include/: airspace.h  flight.h  helpers.h  polygon.h  processing.h  python_out.h
src/: __init__.py  airspace.cpp  flight.cpp  flight_processing.conf  helpers.cpp  main  main.cpp  polygon.cpp  processing.cpp  python_out.cpp  utils.py
src/flight_processing/: __init__.py  flight_processing.conf  scalebar.py  utils.py
src/flight_processing/data/: __init__.py  airspace_graph.py  construct_graph.py  data_utils.py  export_flights.py  flight_downloader.py  flight_processing.py  graph_builder.py
src/rename/: flight_processing.py
